--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.14.0",
     "react-scripts": "^3.4.3",
     "styled-components": "^5.2.0",
+    "styled-components-breakpoint": "^3.0.0-preview.20",
     "typescript": "~3.7.2"
   },
   "scripts": {
