--- a/package.json
+++ b/package.json
@@ -6,21 +6,21 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/dropzone": "^5.7.1",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-dropzone": "^5.1.0",
     "@types/styled-components": "^5.1.4",
-    "file-selector": "^0.2.1",
+    "@types/yup": "^0.29.8",
+    "formik": "^2.2.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-dropzone": "^11.2.0",
     "react-scripts": "^3.4.3",
     "styled-components": "^5.2.0",
-    "styled-components-breakpoint": "^3.0.0-preview.20",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
