--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dropzone": "^5.1.0",
     "@types/styled-components": "^5.1.4",
     "@types/yup": "^0.29.8",
+    "dotenv": "^8.2.0",
     "formik": "^2.2.1",
     "lodash": "^4.17.20",
     "react": "^16.14.0",
