--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
-  "name": "liteflix-test-2",
-  "version": "0.1.0",
-  "private": true,
+  "name": "with-typescript",
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "next",
+    "build": "next build",
+    "start": "next start",
+    "type-check": "tsc"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -14,39 +19,24 @@
     "@types/react-dropzone": "^5.1.0",
     "@types/styled-components": "^5.1.4",
     "@types/yup": "^0.29.8",
-    "dotenv": "^8.2.0",
-    "formik": "^2.2.1",
+    "axios": "^0.21.0",
+    "formik": "2.1.6",
     "lodash": "^4.17.20",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "next": "latest",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-dropzone": "^11.2.0",
+    "react-query": "^2.25.2",
     "react-scripts": "^3.4.3",
     "styled-components": "^5.2.0",
     "typescript": "~3.7.2",
+    "xmlhttprequest": "^1.8.0",
     "yup": "^0.29.3"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "devDependencies": {
+    "@types/node": "^12.12.21",
+    "@types/react": "^16.9.16",
+    "@types/react-dom": "^16.9.4",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^2.10.0",
     "babel-eslint": "^10.1.0",
@@ -64,6 +54,8 @@
     "eslint-plugin-react-hooks": "^4.0.8",
     "prettier": "^2.1.2",
     "prettier-eslint": "^11.0.0",
-    "prettier-eslint-cli": "^5.0.0"
-  }
+    "prettier-eslint-cli": "^5.0.0",
+    "typescript": "4.0"
+  },
+  "license": "MIT"
 }
