--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-dropzone": "^11.2.0",
-    "react-query": "^2.25.2",
+    "react-query": "2.23.1",
     "react-scripts": "^3.4.3",
     "styled-components": "^5.2.0",
     "typescript": "~3.7.2",
