--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-dropzone": "^5.1.0",
+    "@types/react-transition-group": "^4.4.0",
     "@types/styled-components": "^5.1.4",
     "@types/yup": "^0.29.8",
     "axios": "^0.21.0",
@@ -28,6 +29,7 @@
     "react-dropzone": "^11.2.0",
     "react-query": "2.23.1",
     "react-scripts": "^3.4.3",
+    "react-transition-group": "^4.4.1",
     "styled-components": "^5.2.0",
     "typescript": "~3.7.2",
     "xmlhttprequest": "^1.8.0",
