--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,7 @@
     "react/jsx-one-expression-per-line": "off",
     "react/jsx-wrap-multilines": "off",
     "no-use-before-define": "off",
-    "@typescript-eslint/no-use-before-define": "warn"
+    "@typescript-eslint/no-use-before-define": "warn",
+    "react/require-default-props": "off"
   }
 }
