--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "^3.4.3",
     "react-transition-group": "^4.4.1",
     "styled-components": "^5.2.0",
+    "styled-transition-group": "^2.0.1",
     "typescript": "~3.7.2",
     "xmlhttprequest": "^1.8.0",
     "yup": "^0.29.3"
