--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-REACT_APP_CLOUDINARY_BASE_URL=
-REACT_APP_CLOUDINARY_UPLOAD_PRESET=
-REACT_APP_CLOUDINARY_CLOUD_NAME=
+    CLOUDINARY_BASE_URL=
+    CLOUDINARY_UPLOAD_PRESET=
+    CLOUDINARY_CLOUD_NAME=
+    LITEFLIX_BFF_BASE_URL=
