--- a/package.json
+++ b/package.json
@@ -28,13 +28,11 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-dropzone": "^11.2.0",
+    "react-lines-ellipsis": "^0.14.1",
     "react-query": "2.23.1",
     "react-scripts": "^3.4.3",
     "react-transition-group": "^4.4.1",
     "styled-components": "^5.2.0",
-    "styled-transition-group": "^2.0.1",
-    "typescript": "~3.7.2",
-    "xmlhttprequest": "^1.8.0",
     "yup": "^0.29.3"
   },
   "devDependencies": {
